fix gap try
git-svn-id: http://svn.dojotoolkit.org/src@5190 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/trunk/src/widget/templates/TreeV3.css
+++ b/trunk/src/widget/templates/TreeV3.css
@@ -44,10 +44,8 @@
 }
 
 .TreeIEContent {
-    height: 18px;
+    line-height: 1.5em;
 }
-
-
 
 
 .TreeExpand {
